tests/snapshots/contract_snapshot_exhaustive__exhaustive_event_error_without_code.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "error",
  "message": "unexpected backend response"
}
