tests/snapshots/contract_snapshot_exhaustive__exhaustive_event_file_changed.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "file_changed",
  "path": "src/auth/mod.rs",
  "summary": "Added token validation function"
}
