tests/snapshots/contract_snapshot_exhaustive__exhaustive_event_run_started.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "run_started",
  "message": "initializing workspace and loading context"
}
