tests/snapshots/contract_snapshot_exhaustive__exhaustive_event_tool_call_simple.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "tool_call",
  "tool_name": "read_file",
  "tool_use_id": "tu_abc",
  "parent_tool_use_id": null,
  "input": {
    "path": "src/lib.rs"
  }
}
