tests/snapshots/contract_snapshot_exhaustive__exhaustive_event_tool_result_success.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "tool_result",
  "tool_name": "read_file",
  "tool_use_id": "tu_abc",
  "output": {
    "content": "fn main() {\n    println!(\"hello\");\n}"
  },
  "is_error": false
}
