tests/snapshots/contract_snapshot_exhaustive__exhaustive_event_with_ext_passthrough.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "assistant_message",
  "text": "passthrough content",
  "ext": {
    "raw_message": {
      "content": "raw sdk data",
      "role": "assistant"
    },
    "vendor_trace_id": "trace-9876"
  }
}
